@@ -20,6 +20,9 @@ Bugs Fixed
 - Added 'unblock' css class to viewer field iterators so links render
   properly (resulting from removal of the sortable id/class)
 
+- correct localization datetime issues with rssaggregator's rss/atom feeds
+  and inlineviewer newsprovider. 
+
 SilvaNewsNetwork 2.7.5 (2009-03-26)
 -----------------------------------
 
